# real-estate-app

backend/: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: chat_intro.py  final_result.py  result.py  session.py
backend/app/models/: result.py  session.py
backend/app/services/: chat_intro_service.py  chat_result_service.py  chatgpt_service.py  get_final_recommendation.py  scoring_service.py  session_service.py
backend/app/templates/: index.html
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: sessionApi.ts
frontend/src/common/: stageUtils.ts  stages.ts
frontend/src/components/: ChatWindow.tsx  Footer.tsx  Greeting.tsx  Header.tsx
frontend/src/pages/Conditions/: Detail.tsx  LifeStage.tsx
frontend/src/pages/Question/: Question.tsx  types.ts
frontend/src/pages/Question/components/: ChatMessages.tsx  QuickReplies.tsx
frontend/src/pages/Question/hooks/: useIntroOnce.ts
frontend/src/pages/Result/: Result.tsx
frontend/src/pages/Top/: Top.module.css  Top.tsx
