[tool.poetry]
name        = "02-real-estate-ai-vscode"
version     = "0.1.0"
description = ""
authors     = ["Takumi Yamamoto <yama.moomin08@gmail.com>"]
readme      = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python         = ">=3.9,<4.0"
requests       = ">=2.32.4,<3.0.0"
fastapi        = { extras = ["all"], version = ">=0.116.0,<0.117.0" }
openai         = ">=1.9.3,<2.0.0"
python-dotenv  = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"